<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_a_temperature"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp" />

    <!-- Temperature Input -->
    <EditText
        android:id="@+id/editTextTemperature"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/space"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <!-- Select Unit Label -->
    <TextView
        android:id="@+id/textViewSelectUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_unit"
        android:textSize="18sp"
        android:layout_marginTop="40dp" />

    <!-- Buttons Layout -->
    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/buttonCelsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:backgroundTint="@color/teal_700"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/buttonFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/teal_700"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/buttonKelvin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/k"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/teal_700"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <!-- Equals to -->
    <TextView
        android:id="@+id/textViewEqualsTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals_to"
        android:textSize="18sp"
        android:layout_marginTop="40dp"/>

    <!-- Results -->
    <TextView
        android:id="@+id/textViewResult1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewResult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>


</LinearLayout>